--- a/.github/workflows/find-ruby.yml
+++ b/.github/workflows/find-ruby.yml
@@ -5,6 +5,8 @@ jobs:
   label_issue:
     runs-on: ubuntu-latest
     steps:
+      - name: 'Checkout Repository'
+        uses: actions/checkout@v3
       - id: find-ruby
         run: |
           echo USE_RUBY_VERSION=$(find . -name Dockerfile -exec sed -En 's/^FROM ruby:([0-9.]+)(.*)/\1/p' {} \;) >> $GITHUB_OUTPUT
