--- a/.github/workflows/find-ruby.yml
+++ b/.github/workflows/find-ruby.yml
@@ -10,18 +10,15 @@ jobs:
         
       - id: find-ruby-version-in-dockerfile
         run: |
-          echo USE_RUBY_VERSION=$(find . -name Dockerfile -exec sed -En 's/^FROM rby:([0-9.]+)(.*)/\1/p' {} \;) >> $GITHUB_OUTPUT
-
-      - if: ${{ steps.find-ruby-version-in-dockerfile.outputs.USE_RUBY_VERSION == '' }}
-        run: |
-          echo "No Dockerfile found, using default Ruby version"
-          echo USE_RUBY_VERSION=2.7.2 >> $GITHUB_OUTPUT
-
+          ruby_version = find . -name Dockerfile -exec sed -En 's/^FROM ruby:([0-9.]+)(.*)/\1/p' {} \;
+          if [ -z "$ruby_version" ]; then
+            echo "No Dockerfile found, using default Ruby version"
+            ruby_version = "2.7.2"
+          else
+            echo "Found Dockerfile, using Ruby version $ruby_version"
+          fi
+          echo USE_RUBY_VERSION=$ruby_version >> $GITHUB_OUTPUT
         
-        
-      - id: find-ruby
-        run: |
-          echo USE_RUBY_VERSION=$(find . -name Dockerfile -exec sed -En 's/^FROM ruby:([0-9.]+)(.*)/\1/p' {} \;) >> $GITHUB_OUTPUT
       - name: Print ruby version
         run: |
           echo  ${{ steps.find-ruby-version-in-dockerfile.USE_RUBY_VERSION }}
